chore: Azure security hardening + unit tests
Azure improvements:
- AzureBlobStorageServiceImpl: add Managed Identity support via DefaultAzureCredential
  (falls back to connection string if endpoint not set, backward compatible)
- AzureBlobStorageServiceImpl: implement real SAS URL generation with configurable TTL
- GeoRoutingService: move Azure Maps subscription-key from query param to request header
- application-prod.yml: add azure.storage.*.endpoint properties for Managed Identity
- pom.xml: add azure-identity dependency (managed by spring-cloud-azure BOM)

Unit tests added:
- QrCodeServiceTest: 7 tests (PNG generation, data URL, null handling)
- ExcelExportServiceTest: 7 tests (XLSX bytes, sheet naming, null mapper values)
- RatingServiceTest: 17 tests (create/read/update/delete business rules)